bk_ida/gobmkida/c3/compute_connection_distances
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/compute_connection_distances/src/engine/readconnect.c:1754:12: error: expected expression
*( _OWORD *)&conn->distances[v5 + 397] = xmmword_4AEDF0; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/compute_connection_distances/src/engine/readconnect.c:1754:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&conn->distances[v5 + 397] = xmmword_4AEDF0; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/compute_connection_distances/src/engine/readconnect.c:1754:42: error: use of undeclared identifier 'xmmword_4AEDF0'
*( _OWORD *)&conn->distances[v5 + 397] = xmmword_4AEDF0; 
                                         ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/compute_connection_distances/src/engine/readconnect.c:1755:12: error: expected expression
*( _OWORD *)&conn->deltas[v5 + 397] = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/compute_connection_distances/src/engine/readconnect.c:1755:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&conn->deltas[v5 + 397] = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/compute_connection_distances/src/engine/readconnect.c:1756:12: error: expected expression
*( _OWORD *)&conn->coming_from[v5 + 397] = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/compute_connection_distances/src/engine/readconnect.c:1756:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&conn->coming_from[v5 + 397] = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/compute_connection_distances/src/engine/readconnect.c:1757:12: error: expected expression
*( _OWORD *)&conn->vulnerable1[v5 + 397] = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/compute_connection_distances/src/engine/readconnect.c:1757:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&conn->vulnerable1[v5 + 397] = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/compute_connection_distances/src/engine/readconnect.c:1758:12: error: expected expression
*( _OWORD *)&conn->vulnerable2[v5 + 397] = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/compute_connection_distances/src/engine/readconnect.c:1758:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&conn->vulnerable2[v5 + 397] = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/compute_connection_distances/src/engine/readconnect.c:1759:12: error: expected expression
*( _OWORD *)&conn->deltas[v5 + 1] = xmmword_4AEDF0; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/compute_connection_distances/src/engine/readconnect.c:1759:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&conn->deltas[v5 + 1] = xmmword_4AEDF0; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/compute_connection_distances/src/engine/readconnect.c:1759:37: error: use of undeclared identifier 'xmmword_4AEDF0'
*( _OWORD *)&conn->deltas[v5 + 1] = xmmword_4AEDF0; 
                                    ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/compute_connection_distances/src/engine/readconnect.c:1760:12: error: expected expression
*( _OWORD *)&conn->coming_from[v5 + 1] = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/compute_connection_distances/src/engine/readconnect.c:1760:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&conn->coming_from[v5 + 1] = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/compute_connection_distances/src/engine/readconnect.c:1761:12: error: expected expression
*( _OWORD *)&conn->vulnerable1[v5 + 1] = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/compute_connection_distances/src/engine/readconnect.c:1761:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&conn->vulnerable1[v5 + 1] = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/compute_connection_distances/src/engine/readconnect.c:1762:12: error: expected expression
*( _OWORD *)&conn->vulnerable2[v5 + 1] = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/compute_connection_distances/src/engine/readconnect.c:1762:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&conn->vulnerable2[v5 + 1] = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/compute_connection_distances/src/engine/readconnect.c:1763:12: error: expected expression
*( _OWORD *)&conn->queue[v5 + 1] = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/compute_connection_distances/src/engine/readconnect.c:1763:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&conn->queue[v5 + 1] = 0LL; 
   ^
22 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/compute_connection_distances/src/obj/1/readconnect.o] Error 1
